replaced jnr-fuse with jfuse