@@ -19,7 +19,7 @@
 		<maven.compiler.release>19</maven.compiler.release>
 
 		<!-- dependencies -->
-		<jnrfuse.version>0.5.7</jnrfuse.version>
+		<jfuse.version>0.2.0-SNAPSHOT</jfuse.version>
 		<!-- TODO: bump dependency once this project has a proper module.info -->
 		<dagger.version>2.39.1</dagger.version>
 		<guava.version>30.1.1-jre</guava.version>
@@ -52,9 +52,14 @@
 	<dependencies>
 		<!-- FUSE -->
 		<dependency>
-			<groupId>com.github.serceman</groupId>
-			<artifactId>jnr-fuse</artifactId>
-			<version>${jnrfuse.version}</version>
+			<groupId>org.cryptomator</groupId>
+			<artifactId>jfuse-api</artifactId>
+			<version>${jfuse.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cryptomator</groupId>
+			<artifactId>jfuse-mac</artifactId>
+			<version>${jfuse.version}</version>
 		</dependency>
 
 		<!-- DI -->
@@ -135,7 +140,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.10.1</version>
 				<configuration>
 					<showWarnings>true</showWarnings>
 					<annotationProcessorPaths>
@@ -145,6 +150,9 @@
 							<version>${dagger.version}</version>
 						</path>
 					</annotationProcessorPaths>
+					<compilerArgs>
+						<compilerArg>--enable-preview</compilerArg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -184,6 +192,10 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+						<configuration>
+							<release>19</release>
+							<additionalOptions>--enable-preview</additionalOptions>
+						</configuration>
 					</execution>
 				</executions>
 				<configuration>
